--- a/config/transformations/create_asset_hierarchy/manifest.yaml
+++ b/config/transformations/create_asset_hierarchy/manifest.yaml
@@ -1,15 +1,15 @@
 ---
 # Manifest file downloaded from fusion
-externalId: tr-asset-sample
-name: create_asset_sample
+externalId: tr-create_asset_hierarchy_ui
+name: create_asset_hierarchy_ui
 query:
-    file: transformation.sql
+file: transformation.sql
 destination:
     type: asset_hierarchy
 ignoreNullFields: true
 shared: true
 action: upsert
-dataSetExternalId: src:all
+dataSetExternalId: src:001:sap:ds
 # Specify credentials separately like this:
 # authentication:
 #   read:
@@ -43,7 +43,6 @@ dataSetExternalId: src:all
 #    - ${SCOPES}
 #   # Optional: If idP requires providing the audience
 #   audience: ${AUDIENCE}
-
 authentication:
     clientId: ${COGNITE_CLIENT_ID}
     clientSecret: ${COGNITE_CLIENT_SECRET}
